updated retention analysis

--- a/talk-page-contributors-analysis.ipynb
+++ b/talk-page-contributors-analysis.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
     "            ELSE '500+'\n",
     "            END AS user_edit_count_bucket\n",
     "FROM wmf.mediawiki_history mwh\n",
-    "inner join canonical_data.wikis_backup_20191030\n",
+    "inner join canonical_data.wikis\n",
     "on\n",
     "    wiki_db = database_code and\n",
     "    database_group ==  'wikipedia'\n",
@@ -118,7 +118,7 @@
     "    event_timestamp < '2019-11-01' and \n",
     "    event_entity = 'revision' and\n",
     "    event_type = 'create' and\n",
-    "    snapshot = '2019-10' and \n",
+    "    snapshot = '2019-11' and \n",
     "    page_namespace_historical % 2 == 1   -- all talk pages have odd numbered page_namespace \n",
     "\n",
     ") as info\n",
@@ -133,16 +133,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 200,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in system(paste0(\"export HADOOP_HEAPSIZE=\", heap_size, \" && \", ifelse(use_nice, :\n",
+      "“system call failed: Cannot allocate memory”Warning message in file(file, \"rt\"):\n",
+      "“cannot open file '/tmp/RtmpvGKugt/file5bb45100305e': No such file or directory”Warning message in file.remove(query_dump, results_dump):\n",
+      "“cannot remove file '/tmp/RtmpvGKugt/file5bb45100305e', reason 'No such file or directory'”"
+     ]
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error in nrow(data): object 'results' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in nrow(data): object 'results' not found\nTraceback:\n",
+      "1. wmf::query_hive(query)",
+      "2. stop_on_empty(results)",
+      "3. nrow(data)"
+     ]
+    }
+   ],
    "source": [
     "talk_contributor_edits <- wmf::query_hive(query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -306,12 +328,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From September 1, 2018 through September 30, 2019, there are an average of 2.4K unique junior contributors per month that contribute to talk pages on wikipedias."
+    "From September 1, 2018 through September 30, 2019, there are an average of 24K unique junior contributors per month that contribute to talk pages on wikipedias."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -749,9 +771,9 @@
        "\t<tr><th scope=col>&lt;date&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>2019-09-01</td><td>25438</td><td> 3.6762308</td><td>under 100</td></tr>\n",
-       "\t<tr><td>2019-09-01</td><td> 5302</td><td>-0.8044902</td><td>100+     </td></tr>\n",
-       "\t<tr><td>2019-09-01</td><td>19401</td><td> 0.4816656</td><td>500+     </td></tr>\n",
+       "\t<tr><td>2019-10-01</td><td>25588</td><td>-6.033565</td><td>under 100</td></tr>\n",
+       "\t<tr><td>2019-10-01</td><td> 5563</td><td> 2.185893</td><td>100+     </td></tr>\n",
+       "\t<tr><td>2019-10-01</td><td>19804</td><td> 1.082074</td><td>500+     </td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -761,9 +783,9 @@
        " date & contributors & yoy\\_percent & edit\\_count\\\\\n",
        " <date> & <int> & <dbl> & <chr>\\\\\n",
        "\\hline\n",
-       "\t 2019-09-01 & 25438 &  3.6762308 & under 100\\\\\n",
-       "\t 2019-09-01 &  5302 & -0.8044902 & 100+     \\\\\n",
-       "\t 2019-09-01 & 19401 &  0.4816656 & 500+     \\\\\n",
+       "\t 2019-10-01 & 25588 & -6.033565 & under 100\\\\\n",
+       "\t 2019-10-01 &  5563 &  2.185893 & 100+     \\\\\n",
+       "\t 2019-10-01 & 19804 &  1.082074 & 500+     \\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -772,16 +794,16 @@
        "\n",
        "| date &lt;date&gt; | contributors &lt;int&gt; | yoy_percent &lt;dbl&gt; | edit_count &lt;chr&gt; |\n",
        "|---|---|---|---|\n",
-       "| 2019-09-01 | 25438 |  3.6762308 | under 100 |\n",
-       "| 2019-09-01 |  5302 | -0.8044902 | 100+      |\n",
-       "| 2019-09-01 | 19401 |  0.4816656 | 500+      |\n",
+       "| 2019-10-01 | 25588 | -6.033565 | under 100 |\n",
+       "| 2019-10-01 |  5563 |  2.185893 | 100+      |\n",
+       "| 2019-10-01 | 19804 |  1.082074 | 500+      |\n",
        "\n"
       ],
       "text/plain": [
        "  date       contributors yoy_percent edit_count\n",
-       "1 2019-09-01 25438         3.6762308  under 100 \n",
-       "2 2019-09-01  5302        -0.8044902  100+      \n",
-       "3 2019-09-01 19401         0.4816656  500+      "
+       "1 2019-10-01 25588        -6.033565   under 100 \n",
+       "2 2019-10-01  5563         2.185893   100+      \n",
+       "3 2019-10-01 19804         1.082074   500+      "
       ]
      },
      "metadata": {},
